<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="@color/foody_background"
    tools:context=".ui.checkout.CheckoutFragment">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/foody_background"
        android:paddingBottom="40dp">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/left_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent=".05" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/right_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent=".95" />


        <TextView
            android:id="@+id/delivery_tb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delivery"
            android:textColor="@color/black"
            android:textSize="34sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/left_guideline"
            app:layout_constraintTop_toTopOf="parent" />


        <RelativeLayout
            android:id="@+id/holder"
            android:layout_width="0dp"
            android:layout_marginTop="30dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="@+id/right_guideline"
            app:layout_constraintStart_toStartOf="@+id/left_guideline"
            app:layout_constraintTop_toBottomOf="@+id/delivery_tb">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:text="@string/address_details"
                android:textColor="@color/black"
                android:textSize="17sp"
                android:textStyle="bold" />


        </RelativeLayout>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/details_card_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="19dp"
            app:cardCornerRadius="30dp"
            app:layout_constraintEnd_toEndOf="@+id/right_guideline"
            app:layout_constraintStart_toStartOf="@+id/left_guideline"
            app:layout_constraintTop_toBottomOf="@+id/holder">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginBottom="8dp"
                android:orientation="vertical"
                android:padding="8dp">


                <TextView
                    android:id="@+id/client_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="27dp"
                    android:hint="@string/name"
                    android:textColor="@color/black"
                    android:textSize="17sp"
                    android:textStyle="bold"
                    tools:text="Imad El Bouhati" />


                <View
                    android:layout_width="280dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:background="@drawable/line_drawable" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/address"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_centerVertical="true"
                        android:layout_toLeftOf="@+id/change_adress"
                        android:clickable="true"
                        android:focusable="true"
                        android:focusableInTouchMode="true"
                        android:hint="@string/no_address_selected"
                        android:maxLines="1"
                        android:textColor="@color/black"
                        android:textSize="15sp"
                        tools:text="Hay Al Andalouss N 44 Tiflet Hay Al Andalouss N 44 TifletHay Al Andalouss N 44 Tiflet" />

                    <TextView
                        android:id="@+id/change_adress"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:text="@string/change"
                        android:textColor="@color/foody_orange"
                        android:textSize="15sp" />
                </RelativeLayout>


                <View
                    android:layout_width="280dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:background="@drawable/line_drawable" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">


                    <EditText
                        android:id="@+id/phone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_toLeftOf="@+id/change_phone"
                        android:background="@android:color/transparent"
                        android:clickable="true"
                        android:focusable="true"
                        android:focusableInTouchMode="true"
                        android:hint="@string/no_phone_number"
                        android:inputType="phone"
                        android:maxLines="1"
                        android:textColor="@color/black"
                        android:textSize="15sp" />

                    <TextView
                        android:id="@+id/change_phone"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:text="@string/change"
                        android:textColor="@color/foody_orange"
                        android:textSize="15sp" />
                </RelativeLayout>


            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>


        <TextView
            android:id="@+id/payment_method_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/payment_method"
            android:textColor="@color/black"
            android:textSize="17sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/left_guideline"
            app:layout_constraintTop_toBottomOf="@+id/details_card_view" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/payment_card_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:cardCornerRadius="30dp"
            app:layout_constraintEnd_toEndOf="@+id/right_guideline"
            app:layout_constraintStart_toStartOf="@+id/left_guideline"
            app:layout_constraintTop_toBottomOf="@+id/payment_method_tv">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:orientation="vertical"
                android:padding="8dp">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <RadioButton
                        android:id="@+id/cash_on_delivery_radio"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true" />

                    <ImageView
                        android:id="@+id/cash_on_delivery_icon"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_centerVertical="true"
                        android:layout_toEndOf="@+id/cash_on_delivery_radio"
                        android:src="@drawable/cash_on_delivery" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="20dp"
                        android:layout_toEndOf="@+id/cash_on_delivery_icon"
                        android:text="@string/cash_on_delivery"
                        android:textColor="@color/black"
                        android:textSize="17sp" />
                </RelativeLayout>

                <View
                    android:layout_width="280dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="15dp"
                    android:background="@drawable/line_drawable" />

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <RadioButton
                        android:id="@+id/credit_card_radio"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true" />

                    <ImageView
                        android:id="@+id/credit_card_icon"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_centerVertical="true"
                        android:layout_toEndOf="@+id/credit_card_radio"
                        android:src="@drawable/ic_credit_card" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="20dp"
                        android:layout_toEndOf="@+id/credit_card_icon"
                        android:text="@string/bank_account"
                        android:textColor="@color/black"
                        android:textSize="17sp" />
                </RelativeLayout>
            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>


        <TextView
            android:id="@+id/total_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="35sp"
            android:text="@string/total"
            android:textColor="@color/black"
            android:textSize="17sp"
            app:layout_constraintStart_toStartOf="@+id/left_guideline"
            app:layout_constraintTop_toBottomOf="@+id/payment_card_view" />

        <TextView
            android:id="@+id/total"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0.00 MAD"
            android:textColor="@color/black"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/total_tv"
            app:layout_constraintEnd_toEndOf="@+id/right_guideline"
            app:layout_constraintTop_toTopOf="@+id/total_tv" />


        <Button
            android:id="@+id/proceed_payment_btn"
            android:layout_width="0dp"
            android:layout_height="70dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/rounded_button"
            android:text="@string/make_order"
            android:textAllCaps="false"
            android:textSize="17sp"
            android:layout_marginBottom="56dp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/right_guideline"
            app:layout_constraintStart_toStartOf="@+id/left_guideline"
            app:layout_constraintTop_toBottomOf="@+id/total_tv" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>